got trees and words back for the ajax comments

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -31,7 +31,9 @@
 		<div class="create-trail-button">Create A Trail</div>
 	</div>
 	<div class="trail-form">
+		<h2>Create a trail</h2>
 		<form action="/user_trails/new">
+
 			<input name="latitude" type="hidden"></input>
 
 			<input name="longitude" type="hidden"></input>
