added map to the carousel

--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -137,6 +137,12 @@ i.fa-camera-retro{
   margin: 0 auto;
 }
 
+.trail-carousel-map-img img{
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+}
+
 /*OTHER PEOPLES STUFF*/
 
 
