--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -26,6 +26,7 @@
     
 
     <div class="trail-carousel"> 
+      <div class="trail-carousel-map-img"><%= image_tag("google_map.jpg") %></div>
       <% @trail.photos.each do |photo|  %>
         <div class="trail-carousel-img"><img src=<%= photo.image_url(:thumb).to_s %>></img>
         </div>
