needed to change the logic for see more comments button. It was showing the see more comments button if there were 5 or more comments for the trail. It should be six or more because five are already on the page for load

--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -125,7 +125,7 @@
           <% end %>
         <% end %>
 
-        <% unless @trail.comments.size < 5 %>
+        <% unless @trail.comments.count < 6 %>
           <div class="see-more-comments-button"><button>See More</button></div>
         <% end %>
       </div> 
