--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -28,11 +28,11 @@
     
     <div class="input tip">
       <label >Tip: </label><br>
-      <textarea placeholder="key trail info other hikers have to know" name="tip" rows="3" maxlength="140" required></textarea>
+      <textarea placeholder="Key trail info other hikers have to know" name="tip" rows="3" maxlength="140" required></textarea>
     </div>
     <div class="input review">
       <label >Review:</label><br>
-      <textarea placeholder="give us the good, the bad, and the ugly about this trail. leave no stone unturned!" name="review" rows="6" required></textarea>
+      <textarea placeholder="Give us the good, the bad, and the ugly about this trail. leave no stone unturned!" name="review" rows="6" required></textarea>
     </div>
     <div class="input date-hiked">
       <label >Date Hiked:</label>
