adding cancel comment form button

--- a/app/views/layouts/_comment.html.erb
+++ b/app/views/layouts/_comment.html.erb
@@ -39,5 +39,6 @@
       <input type="date" name="date-hiked" required>
     </div>
     <button type="submit" name="comment_submit">Post</button>
+    <button class="cancel-create-comment">Cancel</button>
   </div>
 </div>
