--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -297,7 +297,7 @@ nav ul li a{
   border: 3px solid #cccccc;
   background: #FBFFED;
   width: 35%;
-  height: 500px;
+  height: 550px;
   margin-top: 2%;
 }
 
@@ -394,6 +394,18 @@ div.date-hiked input{
   margin-right: 0px;
   margin-left: 0px;
   cursor: pointer;
+}
+
+button.cancel-create-comment{
+  background-color: #87919E;
+  padding: 10px;
+  margin-top: 1em;
+  border-radius: 5px;
+  color: white;
+  width: 100%;
+}
+button.cancel-create-comment:hover{
+  background-color: #A9B5C5;
 }
 
 
