--- a/app/assets/stylesheets/trails_show.css
+++ b/app/assets/stylesheets/trails_show.css
@@ -56,6 +56,9 @@ h3{
   border: 1px solid hsla(163, 2%, 29%, 0);
 }
 
+.hiker-photos h3{
+  font-size: 1.4em;
+}
 
 /*this is where the actual upload button is*/
 #photo_image{
@@ -125,6 +128,11 @@ i.fa-camera-retro{
   margin-top: 45px;
   margin-bottom: 30px;
 }
+
+.hiker-commentaries h3{
+  font-size: 1.4em;
+}
+
 .fa .fa-camera-retro{
   text-align: left;
 }
