added background image for signup form

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
 </div>
 
 <div class="signup-form">
-  <span class="close-button signup">X</span>
+  <div class="close-button signup">X</div>
   <h3>Sign Up</h3>
 
   <div class="center">
