--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -92,7 +92,9 @@ h1#title {
 .signup-form {
   border-radius: 4px;
   display: none;
-  background-color: #FCFCFC;
+  background-image: url(signup-image.jpg);
+  background-size: 100% 100%; 
+  /*background-color: #FCFCFC;*/
   width: 50%;
   border: 1px solid black;
   vertical-align: middle;
@@ -141,21 +143,15 @@ h1#title {
 
 .close-button{
   position: relative;
-  color: white;
-  border: 1px solid black;
-  background-color: #383937;
-  border-radius: 999px;
+  color: #60615F;
   float: right;
-  right: -0.45em;
-  top: -0.75em;
-  padding: 0.75em;
-  cursor: hand;
   cursor: pointer;
+  margin: 1em 1em 0 0;
+  font-size: 1.4em;
 }
 
 .close-button:hover{
-  background-color: #60615F;
-  color: white;
+  color: black;
 }
 
 .logout-button{
