--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -94,7 +94,6 @@ h1#title {
   display: none;
   background-image: url(signup-image.jpg);
   background-size: 100% 100%; 
-  /*background-color: #FCFCFC;*/
   width: 50%;
   border: 1px solid black;
   vertical-align: middle;
@@ -105,6 +104,7 @@ h1#title {
   text-align: center;
   display: block;
   font-size: 45px;
+  color: steelblue;
   margin: 0px;
   margin-top: 5%;
   margin-bottom: 30px;
