--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -46,10 +46,12 @@ h1#title {
 
 .signin-form h3{
   text-align: center;
-  margin-bottom: 20px;
+  display: block;
   font-size: 45px;
+  color: steelblue;
   margin: 0px;
-  margin-top: 7%
+  margin-top: 5%;
+  margin-bottom: 30px;
 }
 
 .signin-form input[type="email"] {
