added warning message if user is not signed in they can't create a trail

--- a/app/views/home/index.erb
+++ b/app/views/home/index.erb
@@ -32,6 +32,7 @@
 	</div>
 	<div class="trail-form">
 		<h2>Create A Trail</h2>
+		<h3 class="trail-form-signin-message">Please Signin to Create A Trail!</h3>
 		<form action="/user_trails/new">
 
 			<input name="latitude" type="hidden"></input>
