--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -264,7 +264,8 @@ div.home-description {
   padding: 10px;
   border-radius: 5px;
   color: white;
-  width: 100%;
+  width: 106%;
+  font-size: 1.3em;
 }
 
 .submit-create-trail:hover{ 
@@ -277,7 +278,8 @@ div.home-description {
   margin-top: 1em;
   border-radius: 5px;
   color: white;
-  width: 100%;
+  width: 106%;
+  font-size: 1.3em;
 }
 .cancel-create-trail:hover{
   background-color: #A9B5C5;
